# QuantitativeTradeBot

./: .gitignore  00_PROJECT_STRUCTURE.md  Directory.Build.props  Directory.Packages.props  LICENSE  NexusTradingEngine.sln  README.md  build_native.bat  build_native.ps1  nexus_config.json.template  process_xau.py
.nexus_docs/: 01_ARCHITECTURE.md  02_DATABASE_SCHEMA.md  03_PROGRESS.md  04_NEXT_STEPS.md  05_EXECUTION_PIPELINE.md  06_STRATEGY_RUNTIME.md  07_NATIVE_ACCELERATION.md  08_MT5_PROTOCOL.md  08_SECURITY_MODEL.md  09_E2E_TEST_PLAN.md  10_OBSERVABILITY.md  11_LOCAL_VALIDATION.md  12_DESKTOP_CLIENT.md  13_RELEASE_ENGINEERING.md  MetaTrade5.md
.project/: 00_MASTER_PLAN.md  01_ARCHITECTURE.md  08_MT5_PROTOCOL.md  13_EXECUTION_ENGINE.md  21_PROGRESS.md  22_TODO.md  23_NEXT_SESSION.md  25_DECISIONS.md  26_CHANGELOG.md  30_PROJECT_STATE.md
Nexus.Infrastructure.Storage/: KnowledgeDataWriter.cs  Nexus.Infrastructure.Storage.csproj  StorageDependencyInjection.cs  TrainingDbContext.cs
Nexus.Infrastructure.TorchSharp/: Nexus.Infrastructure.TorchSharp.csproj  TorchDependencyInjection.cs
Nexus.PriceAction/: Nexus.PriceAction.csproj
docs/: 01_ARCHITECTURE.md  (+32 more)
src/Nexus.Native.Core/: CMakeLists.txt
src/Nexus.Native.Core/include/nexus_core/: accumulator.h  core_runtime.h  interop_abi.h  lock_free_foundation.h  market_evaluator.h  market_state.h  market_state_native.h  market_vector.h  memory_pool.h  threading_foundation.h
src/Nexus.Native.Core/src/: accumulator.cpp  core_runtime.cpp  market_state.cpp  market_vector.cpp
src/Nexus.Native.Core/tests/: native_tests.cpp
(+536 files in other folders)
